--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ section{
     display: flex;
     align-items: center;
     padding: 0 9%;
-    background: url('images/hero_img.png');
+    background: url('/images/hero_img.png');
     background-position: center;
     background-size: cover;
 }
