--- a/style.css
+++ b/style.css
@@ -42,6 +42,8 @@ body{
 }
 .header.sticky{
     background: var(--bg-color);
+    box-shadow: 0 1px 8px rgba(246, 184, 27, 0.477);
+    transition: 0.3s;
 }
 .logo{
     font-size: 2.5rem;
